# synthetic_pest_detection

./: .gitignore  README.md  TUTORIAL  TUTORIAL.md  code.py  pyproject.toml  requirements.txt  secret_message.py  setup.sh  setupDCC.sh  setupPC.ps1  setupUNIX.sh
_backup_code_mir/: .gitignore  CODEBASE_ANALYSIS.md  PLAN.md  PROJECT_CONTEXT.md  README.md  VideoGeneratorUsage.md  colab_render.ipynb
_backup_code_mir/app/: __init__.py
_backup_code_mir/app/static/: style.css
_backup_code_mir/generator/: compositing.py  config.py  pest_models.py  pipeline.py
_backup_code_mir/generator/kitchen_img/: generate_kitchen.py  test_train_split.csv  trian_split.py
_backup_code_mir/generator/mmcv_stub/mmcv/: __init__.py
_backup_code_mir/kitchen_image_gen/: .gitignore  package-lock.json  package.json
_backup_code_mir/kitchen_image_gen/app/: layout.tsx  page.tsx
_backup_code_mir/kitchen_image_gen/components/: ImageGallery.tsx  ImageGenerator.tsx
_backup_code_mir/kitchen_image_gen/lib/: gemini.ts  prompts.ts  storage.ts
_backup_code_mir/model/: evaluate_detection.py  finetune_detr.py  inference_detection.py  requirements.txt
_backup_code_mir/scripts/: build_dataset.py  generate_kitchen_images.py  precompute_depths.py  render_batch_colab.py  upscale_images.py
_backup_code_mir/slurm/: evaluate.sbatch  generate_videos.sbatch  train_model.sbatch
_backup_code_mir/training/: config.py  evaluate.py  model.py  train.py
_backup_code_mir/video_generator/: add_pests_to_kitchen.py  batch_render.py  benchmark.py  config.json  extract_frames.py  generate_configs.py  generate_depth_map.py  generate_floor_mask.py  merge_datasets.py  requirements.txt  run_batch_pipeline.py  run_pipeline.py
analysis/: 1_01_epoch_evaluation.py  1_02_ite_evaluation.py  2_epoch_analysis.py  2_ite_analysis.py
analysis/data/: 1_epoch_evaluation.csv
app/: main.py
app/static/: style.css
app/templates/: curator.html  index.html
generator/: blender_script.py  compositing.py  config.py  depth_estimator.py  generate.py  labeler.py  pest_animation.py  pest_models.py  pipeline.py  scene_setup.py
generator/kitchen_img/: download_kitchens.py  tain_split.csv  test_train_split.py  trian_split.py
generator/kitchen_img/downloader/: download_kitchens.py
generator/model_curator/: __init__.py  curator.py  species_info.py
outputs/: generated_state.json
readme/: README.md
training/: config.py  data_utils.py  dataset.py  evaluate.py  hf_upload.py  inference.py  metrics.py  model.ipynb  model.py  prepare_dataset.py  reporting.py  train.py  train_yolo.py  upload_to_hf.py
(+5 files in other folders)
