[tool.poetry]
name = "synthetic-data-gen-pest"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.0"
torch = ">=2.0"
torchvision = ">=0.15"
timm = ">=0.9"
transformers = ">=4.30"
opencv-python = ">=4.8"
Pillow = ">=10.0"
numpy = ">=1.24"
einops = ">=0.6"
mmengine = ">=0.7"
imageio-ffmpeg = ">=0.4"
requests = ">=2.28"
rembg = {extras = ["cpu"], version = ">=0.1"}
trimesh = ">=3.0"
omegaconf = ">=2.3"
huggingface-hub = ">=0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
