[tool.poetry]
name = "synthetic-data-gen-pest"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = ">=3.0"
# torch and torchvision are installed by setup scripts after checking CUDA
# availability so CPU-only environments do not pull in large nvidia-* wheels.
# torch = ">=2.0"
# torchvision = ">=0.15"
# timm is also installed by setup scripts after torch/torchvision because it
# depends on both and would otherwise pull them back in transitively.
# timm = ">=0.9"
transformers = ">=4.30"
opencv-python = ">=4.8"
Pillow = ">=10.0"
numpy = ">=1.24"
einops = ">=0.6"
mmengine = ">=0.7"
imageio-ffmpeg = ">=0.4"
huggingface-hub = ">=0.19"
python-dotenv = ">=1.0"
google-generativeai = ">=0.8"
tqdm = ">=4.65"
scikit-learn = ">=1.4"
pycocotools = { version = ">=2.0.7", markers = "sys_platform != 'win32'" }
pycocotools-windows = { version = ">=2.0.0.2", markers = "sys_platform == 'win32'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
